<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_check"
        android:title="@string/check"
        android:icon="@drawable/ic_radio_button_checked_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_move"
        android:title="@string/move"
        android:icon="@drawable/ic_create_new_folder_black_24dp"
        app:showAsAction="never"/>
</menu>